--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@400;500;600;700&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/boldenvan" rel="stylesheet">
   <link rel="icon" href="./assets/images/logo_color.png" type="image/x-icon">
 </head>
 <body id="top">
