--- a/Menu.html
+++ b/Menu.html
@@ -85,7 +85,7 @@
                 </div>
                 <br>
                 <div class="price-wrapper">
-                  <data class="price">C$170.00</data>
+                  <data class="price">C$190.00</data>
                 </div>
 
               </div>
@@ -105,12 +105,12 @@
 
                 <h3 class="h3 card-title">Tacos Birria</h3>
                 <div class="wrapper">
-                  <p class="category" style="text-align: left;">Orden de 4 tacos con doble tortilla, su caldito de res y
+                  <p class="category" style="text-align: left;">Orden de 4 tacos con doble tortilla, su caldito de res, queso mosarella y
                     dos salsas (Salsa verde y salsa roja)</p>
                 </div>
 
                 <div class="price-wrapper">
-                  <data class="price" value="29.00">C$200.00</data>
+                  <data class="price" value="29.00">C$220.00</data>
                 </div>
 
               </div>
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="price-wrapper">
-                  <data class="price" value="29.00">C$240.00</data>
+                  <data class="price" value="29.00">C$260.00</data>
                 </div>
               </div>
             </li>
@@ -185,13 +185,15 @@
                 <div class="price-wrapper">
                   <data class="price" value="29.00">
                     •6 Chunks•
-                    C$180.00
+                    C$210.00
                     <br>
                     •8 Chunks•
-                    C$230.00
+                    C$260.00
                     <br>
                     •10 Chunks•
-                    C$260.00
+                    C$300.00
+                    <br>
+                    (Bañados en tu salsa de preferencia por C$30 adicionales)
                   </data>
                 </div>
               </div>
@@ -215,7 +217,7 @@
                 <br>
                 <div class="price-wrapper">
                   <data class="price" value="29.00">
-                    C$140.00
+                    C$150.00
                   </data>
                 </div>
 
@@ -239,7 +241,108 @@
                 <br>
                 <div class="price-wrapper">
                   <data class="price" value="29.00">
-                    C$80.00
+                    C$100.00
+                  </data>
+                </div>
+
+              </div>
+            </li>
+            <li>
+              <div class="food-menu-card">
+                <div class="card-banner">
+                  <img src="./assets/images/chunkypapas.jpg" width="300" height="300" loading="lazy"
+                    alt="ChunkyPapas" class="w-100">
+                  <br>
+                  <a href="https://wa.me/50557774751" target="_blank">
+                    <button class="btn food-menu-btn" type="button">Ordena ahora!</button>
+                  </a>
+                </div>
+                <h3 class="h3 card-title">Chunky Papas
+                </h3>
+                <div class="wrapper">
+                  <p class="category" style="text-align: left;">
+                    Papá fritas,queso mosarella, mini chunks, acompañado de tres salsas: salsa de tomate, salsa cheddar, salsa ranch.
+                  </p>
+                </div>
+                <br>
+                <div class="price-wrapper">
+                  <data class="price" value="29.00">
+                    C$290.00
+                  </data>
+                </div>
+
+              </div>
+            </li>
+            <li>
+              <div class="food-menu-card">
+                <div class="card-banner">
+                  <img src="./assets/images/sopaazteca.jpg" width="300" height="300" loading="lazy"
+                    alt="SopaAzteca" class="w-100">
+                  <br>
+                  <a href="https://wa.me/50557774751" target="_blank">
+                    <button class="btn food-menu-btn" type="button">Ordena ahora!</button>
+                  </a>
+                </div>
+                <h3 class="h3 card-title">Sopa Azteca
+                </h3>
+                <div class="wrapper">
+                  <p class="category" style="text-align: left;">Pollo desmenuzado previamente sazonado, aguacate y queso fresco en trocitos, acompañado de tortillas fritas.
+                  </p>
+                </div>
+                <br>
+                <div class="price-wrapper">
+                  <data class="price" value="29.00">
+                    C$170.00
+                  </data>
+                </div>
+
+              </div>
+            </li>
+            <li>
+              <div class="food-menu-card">
+                <div class="card-banner">
+                  <img src="./assets/images/fajitapollos.jpg" width="300" height="300" loading="lazy"
+                    alt="BirriaRamen" class="w-100">
+                  <br>
+                  <a href="https://wa.me/50557774751" target="_blank">
+                    <button class="btn food-menu-btn" type="button">Ordena ahora!</button>
+                  </a>
+                </div>
+                <h3 class="h3 card-title">Chicken Tenders
+                </h3>
+                <div class="wrapper">
+                  <p class="category" style="text-align: left;">10 Chicken Tenders acompañados de papas francesas, vegetales, salsa ranch y salsa especial.
+                  </p>
+                </div>
+                <br>
+                <div class="price-wrapper">
+                  <data class="price" value="29.00">
+                    C$350.00
+                  </data>
+                </div>
+
+              </div>
+            </li>
+            <li>
+              <div class="food-menu-card">
+                <div class="card-banner">
+                  <img src="./assets/images/BirriaRamen.jpg" width="300" height="300" loading="lazy"
+                    alt="BirriaRamen" class="w-100">
+                  <br>
+                  <a href="https://wa.me/50557774751" target="_blank">
+                    <button class="btn food-menu-btn" type="button">Ordena ahora!</button>
+                  </a>
+                </div>
+                <h3 class="h3 card-title">Birria Ramen
+                </h3>
+                <div class="wrapper">
+                  <p class="category" style="text-align: left;">Carne y caldo de birria acompañado de ramen, queso mosarella y cebolla con cilantro.
+                  </p>
+                </div>
+                <br>
+                <div class="price-wrapper">
+                  <data class="price" value="29.00">
+                    C$220.00
                   </data>
                 </div>
 
@@ -263,7 +366,34 @@
                     Extra de papas C$60 <br>
                     Extra de salsa C$30 <br>
                     Extra de arroz C$30 <br>
-                    Jugo natural C$25
+                    Coca-cola C$30 <br>
+                    Jugo natural C$30
+                  </data>
+                </div>
+
+              </div>
+            </li>
+            <li>
+              <div class="food-menu-card">
+                <div class="card-banner">
+                  <img src="./assets/images/domingospecial.jpg" width="300" height="300" loading="lazy"
+                    alt="BirriaRamen" class="w-100">
+                  <br>
+                  <a href="https://wa.me/50557774751" target="_blank">
+                    <button class="btn food-menu-btn" type="button">Consulta ahora!</button>
+                  </a>
+                </div>
+                <h3 class="h3 card-title">Especial del Domingo
+                </h3>
+                <div class="wrapper">
+                  <p class="category" style="text-align: left;">Cada domingo sorpréndete con una deliciosa sopa.
+                   
+                  </p>
+                </div>
+                <br>
+                <div class="price-wrapper">
+                  <data class="price" value="29.00">
+                    ¡Consulta nuestra redes sociales para descubrir la sopa del día!
                   </data>
                 </div>
 
